--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'IBM PlexSans Bold';
-    src: url(../starter-code/fonts/IBMPlexSans-Bold.woff) format('woff'), url(../starter-code/fonts/IBMPlexSans-Bold.woff2) format('woff2');
+    src: url(fonts/IBMPlexSans-Bold.woff) format('woff'), url(fonts/IBMPlexSans-Bold.woff2) format('woff2');
     font-style: normal;
     font-weight: 700;
     font-display: swap;
 }
 @font-face {
     font-family: 'IBM PlexSans';
-    src: url(../starter-code/fonts/IBMPlexSans-Regular.woff) format('woff'), url(starter-code/fonts/IBMPlexSans-Regular.woff2) format('woff2');
+    src: url(fonts/IBMPlexSans-Regular.woff) format('woff'), url(fonts/IBMPlexSans-Regular.woff2) format('woff2');
     font-style: normal;
     font-weight: 400;
     font-display: swap;
