--- a/week4.css
+++ b/week4.css
@@ -88,6 +88,7 @@ nav {
     padding-bottom: 15px;
     margin-bottom: 15px;
 }
+
 .story .byline {
     text-transform: uppercase;
     text-align: left;
@@ -169,4 +170,45 @@ nav {
     .featured {
       order: -1;
     }
+  }
+  /* Slideshow container */
+.scontainer 
+{
+  max-width: 100%;
+  position: relative;
+}
+
+/* Next & previous buttons */
+.prev, .next 
+{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 20px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 40px;
+    transition: 0.6s ease;
+    border-radius: 0 8px 8px 0;
+    user-select: none;
+    display: inline-block;  
+    border:none; 
+    font-family:"Book Antiqua";
+    transition: all 0.5s;
+  }
+
+  /* Position the "next button" to the right */
+  .next 
+  {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+    box-sizing: inherit;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover 
+  {
+    background-color: rgba(0,0,0,0.8);
   }
