--- a/studio/project3/style.css
+++ b/studio/project3/style.css
@@ -5,8 +5,9 @@ html {
 footer {
     text-align: center;
 }
-div {
-    float:left;
+body {
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .janet{
     position: fixed;
@@ -15,6 +16,7 @@ div {
     width: 100%;
     flex: auto;
     text-align: center;
+    pointer-events: none;
 }
 .column {
     position:fixed;
@@ -33,6 +35,7 @@ div {
     width: 60%;
     flex:auto;
     text-align: center;
+    pointer-events: none;
 }
 .a{
     position: fixed;
@@ -40,3 +43,439 @@ div {
     left: 20%;
     right: 17%;
 }
+
+nav {
+  transition: top 0.3s;
+}
+
+/* Book Buttons */
+
+img.clear{
+    transition-property: transform;
+    transition-duration: .3s;
+}
+img.clear:hover {
+    transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+.viewall {
+   display: grid;
+    position: absolute;
+    grid-template-columns: repeat(8, 1fr);
+    grid-auto-rows:repeat(8fr, 1fr);
+    grid-gap:1em;
+    align-items: start;
+    object-fit: cover;
+}
+
+img.viewallb{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.viewallb:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.tattoos{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.tattoos:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.modernart{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.modernart:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.typography{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.typography:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.expressionism{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.expressionism:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.fauvism{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.fauvism:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.illustration{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.illustration:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.digitalart{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.digitalart:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.memphisdesign{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.memphisdesign:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+img.artnouveau{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.artnouveau:hover{
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+
+img.mystuffb{
+  transition-property: transform;
+  transition-duration: .3s;
+}
+img.mystuffb:hover {
+  transform: translateX(-10%) translateY(-15%) rotatez(10deg);
+}
+
+
+
+/* Picture Frames */
+
+.grid {
+    display: grid;
+    position: absolute;
+    grid-template-columns: repeat(8, 1fr);
+    grid-auto-rows:repeat(8fr, 1fr);
+    grid-gap:1em;
+    align-items: start;
+    object-fit: cover;
+}
+
+.frame2 {
+    margin-top: 15%;
+    margin-left:15%;
+    grid-column:1/3;
+    grid-row:1/3;
+}
+    .frame2:hover {
+      -webkit-transform-origin: top center;
+    transform-origin: top center;
+    -webkit-animation-name: swing;
+    animation-name: swing;
+    animation-duration: 1s;
+  }
+
+.frame1 {
+    width:90%;
+    margin-top:8%;
+    grid-column:5/8;
+    grid-row: 1/4;
+}
+.frame1:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame3 {
+    width: 80%;
+    margin-top: 15%;
+    grid-column: 4/5;
+    float:right;
+}
+.frame3:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame4 {
+    width: 40%;
+    margin-top: 25%;
+    Margin-left: 40%;
+    grid-column: 7/9;
+    grid-row: 1/3;
+}
+.frame4:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame7 {
+    width:100%;
+    grid-column: 1/2;
+    grid-row:3/5;
+}
+.frame7:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame6 {
+    width: 130%;
+    grid-column: 2/3;
+    grid-row:3/5;
+}
+.frame6:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.details {
+  width: 40%;
+}
+/* frame5 */
+
+.trigger {
+    width: 70%;
+    margin-left: 15%;
+    grid-column: 3/5;
+    grid-row: 2/4;
+    background-color: transparent;
+    border-color: transparent;
+    cursor: pointer;
+}
+.modal {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 1, 20, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem 1.5rem;
+  width: 70%;
+  border-radius: 0.5rem;
+}
+.close-button {
+  float: right;
+  width: 1.5rem;
+  line-height: 1.5rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  background-color: lightgray;
+}
+
+.show-modal {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1.0);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+.trigger:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+
+.frame14 {
+    width: 50%;
+    margin-top: 35%;
+    margin-left: 40%;
+    grid-column: 7/9;
+    grid-row: 2/4;
+}
+.frame14:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame9 {
+    width:80%;
+    margin-left: 15%;
+    margin-top: 35%;
+    grid-column: 3/5;
+    grid-row: 3/5;
+}
+.frame9:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame8 {
+    width: 65%;
+    margin-top: 30%;
+    margin-left: 15%;
+    grid-column: 5/7;
+    grid-row: 3/5;
+}
+.frame8:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame10 {
+    width: 60%;
+    margin-left: 30%;
+    grid-column:6/9;
+    grid-row: 4/6
+}
+.frame10:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame11 {
+    margin-top: 25%;
+    grid-column: 1/3;
+    grid-row: 4/6;
+}
+.frame11:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame13 {
+    width: 70%;
+    margin-top: 30%;
+    grid-column: 3/5;
+    grid-row:4/6;
+}
+.frame13:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame12 {
+    width: 75%;
+    margin-left: 20%;
+    grid-column: 4/7;
+    grid-row: 5/6;
+}
+.frame12:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame15 {
+    margin-top: 130%;
+    grid-column: 1/2;
+    grid-row: 5/7;
+}
+.frame15:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame16 {
+    width: 100%;
+    grid-column: 2/5;
+    grid-row: 6/8;
+    margin-bottom: 140px;
+}
+.frame16:hover {
+    -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  animation-duration: 1s;
+}
+.frame17 {
+    width: 90%;
+    margin-top: 10%;
+    grid-column: 5/7;
+    grid-row: 6/7;
+}
+.frame17:hover {
+  -webkit-transform-origin: top center;
+transform-origin: top center;
+-webkit-animation-name: swing;
+animation-name: swing;
+animation-duration: 1s;
+}
+.frame18 {
+  width:90%;
+  grid-column: 7/9;
+  grid-row: 6/7;
+}
+.frame18:hover {
+  -webkit-transform-origin: top center;
+transform-origin: top center;
+-webkit-animation-name: swing;
+animation-name: swing;
+animation-duration: 1s;
+}
+.frame19{
+  margin-top: 100%;
+  grid-column: 1/2;
+  grid-row: 6/7;
+}
+.frame19:hover {
+  -webkit-transform-origin: top center;
+transform-origin: top center;
+-webkit-animation-name: swing;
+animation-name: swing;
+animation-duration: 1s;
+}
+
+@-webkit-keyframes swing {
+    20% {
+      -webkit-transform: rotate3d(0, 0, 1, 8deg);
+      transform: rotate3d(0, 0, 1, 8deg);
+    }
+  
+    40% {
+      -webkit-transform: rotate3d(0, 0, 1, -6deg);
+      transform: rotate3d(0, 0, 1, -6deg);
+    }
+  
+    60% {
+      -webkit-transform: rotate3d(0, 0, 1, 4deg);
+      transform: rotate3d(0, 0, 1, 4deg);
+    }
+  
+    80% {
+      -webkit-transform: rotate3d(0, 0, 1, -2deg);
+      transform: rotate3d(0, 0, 1, -2deg);
+    }
+  
+    to {
+      -webkit-transform: rotate3d(0, 0, 1, 0deg);
+      transform: rotate3d(0, 0, 1, 0deg);
+    }
+  }
