--- a/project2.css
+++ b/project2.css
@@ -21,7 +21,7 @@ body {
     font-weight: regular;
     font-size: 1.2rem;
     hanging-punctuation: first last;
-    max-width: 30rem;
+    
 }
 h1 {
     font-family: 'Recoleta', normal;
@@ -68,15 +68,15 @@ footer {
     list-style-type: author;
     color:#705c68;
     content: '\2191';
-    padding: 5px;
+    padding: 5%;
     text-align: center;
     font-size: 1rem;
 }
 .container {
     width: 100%;
-    max-width: 30rem;
-    padding: 0 2rem;
-    margin: 3rem auto;
+    max-width: 80%;
+    padding: 4%;
+    margin: 4% auto;
     background-image:  radial-gradient(circle at 50% 30%, #eecab7, #d0b79e, #b1a489, #939276, #777f67, #5b6c58, #435a4b, #2c473f, #000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
